# hackathon2

./: .dockerignore  .env.example  .gitignore  .helmignore  AI_CHATBOT_IMPLEMENTATION_COMPLETE.md  CHATKIT_SETUP.md  CLAUDE.md  DEPLOYMENT_TEST.md  IMPLEMENTATION_SUMMARY.md  NEON_DATABASE_COMPATIBILITY.md  QUICK_REFERENCE.md  README.md  demo_script.md  docker-compose.yml  final_validation.py  preferences.json  pyproject.toml  setup-local-db.sh  tasks.json  test_db_connection.js  validate_implementation.py
.claude/agents/: nextjs-builder.md
.claude/commands/: auth.config.md  auth.signin.md  auth.signup.md  auth.validateToken.md  fastapi.config.md  fastapi.createTodo.md  fastapi.deleteTodo.md  fastapi.getTodos.md  fastapi.updateTodo.md  neon.config.md  neon.delete.md  neon.insert.md  neon.query.md  neon.select.md  neon.update.md
.claude/skills/: README.md  ai.chatkit.backend.md  ai.chatkit.frontend.md  ai.chatkit.widgets.md  auth.2fa.enable.md  auth.2fa.manage.md  auth.2fa.setup.md  auth.2fa.verify.md  auth.betterAuth.md  auth.emailVerification.md  auth.errorHandling.md  auth.forgotPassword.md  auth.form.md  auth.hook.md  auth.jwt.verify.md  auth.magicLink.email.md  auth.magicLink.form.md  auth.magicLink.setup.md  auth.magicLink.signIn.md  auth.magicLink.verify.md  auth.protectedRoutes.md  auth.resendVerification.md  auth.resetPassword.md  auth.serverAction.md  auth.signout.md  auth.social.buttons.md  auth.social.linking.md  auth.social.providers.md  auth.social.setup.md  auth.social.signIn.md  k8s.cleanup.md  k8s.deploy.md  k8s.logs.md  k8s.portforward.md  k8s.setup.md  k8s.start.md  k8s.status.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  BETTER_AUTH_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Dockerfile  README.md  migrate_users.py  pyproject.toml  requirements.txt  reset_db.py  test_auth_setup.py
backend/app/: main.py
backend/tests/: conftest.py
frontend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
helm-charts/todo-app/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
history/adr/: 001-chatkit-integration-architecture.md  002-backend-server-architecture.md  003-data-model-for-conversations.md  004-authentication-integration.md
scripts/: build-images.sh  check-prerequisites.sh  cleanup.sh  deploy.sh  health-check.sh
specs/: overview.md
specs/001-ai-chatbot-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-auth-improvement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-auth-jwt-integration/: data-model.md  (+5 more)
src/: __init__.py  main.py
tests/: __init__.py  conftest.py
todo_web/: setup-nextjs.sh
todo_web/backend/: .env.example  .gitignore  README.md  migrate_additional_tables.py  migrate_recurring_tasks.py  migrate_reminder_timezones.py  pyproject.toml  requirements.txt  run.py  test_websocket.py
todo_web/backend/app/: __init__.py  main.py
todo_web/backend/app/api/: auth_public.py  health.py  preferences.py  reminders.py  tasks.py
todo_web/backend/app/api/auth/: __init__.py  forgot_password.py  login.py  logout.py  me.py  refresh.py  register.py  reset_password.py
todo_web/backend/app/api/users/: __init__.py
todo_web/backend/app/auth/: dependencies.py  middleware.py  schemas.py  utils.py
todo_web/backend/app/core/: auth.py  config.py  database.py  jwks.py  security.py
todo_web/backend/app/models/: preference.py  reminder.py  task.py  user.py
todo_web/backend/app/schemas/: __init__.py  auth.py  reminder.py  task.py  user.py
todo_web/backend/app/services/: auth_service.py
todo_web/backend/app/utils/: recurrence.py
todo_web/backend/tests/: __init__.py
todo_web/backend/tests/auth/: __init__.py  test_password_reset.py
(+386 files in other folders)
