[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools"

[project]
name = "todo-app"
version = "0.1.0"
description = "A command-line todo application that stores tasks in memory"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Todo App Developer"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # No external dependencies for basic functionality
]

[project.scripts]
todo = "src.todo_app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]