[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-console-app"
version = "0.1.0"
description = "In-memory todo console application"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Todo App Developer"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
todo-app = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
