[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-app"
version = "1.0.0"
description = "Professional console-based todo application"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Todo App Developer"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rich>=14.2.0",
]

[project.scripts]
todo = "todo_app.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
